--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nouislider": "^15.4.0",
     "rtlcss": "^3.0.0",
     "smooth-scroll": "^16.1.3",
-    "swiper": "^7.0.3"
+    "swiper": "^7.0.3",
+    "wordcloud": "^1.2.2"
   }
 }
