--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,26 +1,7 @@
 name: CICD
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    container: python:3.8
-    steps:
-      - uses: actions/checkout@v2
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: run django test
-        run:
-          python manage.py test
-  
+ 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: deploy
         uses: appleboy/ssh-action@master
@@ -29,12 +10,5 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          script: |
-            echo "Deployment started ..."
-            
-            # Pull the latest version of the app
-            echo "Copying New changes...."         
-            cd /home/devncnc/project/jobcy && git pull https://${{ secrets.ACCESS_TOKEN }}@github.com/ylrang/KINS.git main
-            echo "New changes copied to server !"
-            
-            ./.scripts/deploy.sh
+          script: |        
+            cd /home/devncnc/project/jobcy && git pull https://${{ secrets.ACCESS_TOKEN }}@github.com/ylrang/KINS.git main && ./.scripts/deploy.sh
