--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,12 @@
 name: CICD
- 
+
+on:
+  push:
+    branches: [ "main" ]
+	pull_request:
+		branches: [ "main" ] 
+
+jobs: 
   deploy:
     runs-on: ubuntu-latest
     steps:
